import { EvilRace } from '../../Race.ts';

export class BadSoutherner extends EvilRace {
    constructor() {
        super('Bad Southerner', 2);
    }
}
