import { EvilRace } from '../../Race.ts';

export class Goblin extends EvilRace {
    constructor() {
        super('Goblin', 2);
    }
}
