import { EvilRace } from '../../Race.ts';

export class Huargo extends EvilRace {
    constructor() {
        super('Huargo', 3);
    }
}
