import { EvilRace } from '../../Race.ts';

export class Orc extends EvilRace {
    constructor() {
        super('Orc', 2);
    }
}
