import { EvilRace } from '../../Race.ts';

export class Troll extends EvilRace {
    constructor() {
        super('Troll', 5);
    }
}
