import { GoodRace } from '../../Race.ts';

export class Dwarf extends GoodRace {
    constructor() {
        super('Dwarf', 3);
    }
}
