import { GoodRace } from '../../Race.ts';

export class Elf extends GoodRace {
    constructor() {
        super('Elf', 5);
    }
}
