import { GoodRace } from '../../Race.ts';

export class GoodSoutherner extends GoodRace {
    constructor() {
        super('Good Southerner', 2);
    }
}
