import { GoodRace } from '../../Race.ts';

export class Numenorean extends GoodRace {
    constructor() {
        super('Numenorean', 4);
    }
}
