import { GoodRace } from '../../Race.ts';

export class Peloso extends GoodRace {
    constructor() {
        super('Peloso', 1);
    }
}
